fix: overflow of UI on vault

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -89,7 +89,7 @@ body {
       padding: 2rem 1rem;
 }
 
-header {
+.app-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
